[package]
name = "z-layouts"
version = "1.1.0"
edition = "2021"
authors = [
    "Craig O'Connor <craiggles@opens2.com>",
    "Lucas Rosa <x@rvcas.dev>"
]
publish = false

[dependencies]
ansi_term = "0.12.1"
chrono = "0.4.26"
owo-colors = "4.0.0"
zellij-tile = "0.41"
# zellij-tile = { git = "https://github.com/zellij-org/zellij", branch = "main", package = "zellij-tile" }
